<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ui.login.LoginActivity">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_big"
        android:textStyle="bold"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorTransparent">

        <Button
            android:id="@+id/btn_login_fb"
            android:layout_width="@dimen/button_width_login"
            android:layout_height="@dimen/button_height_login"
            android:text="@string/login_facebook"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:textSize="@dimen/text_normal"
            android:background="@drawable/select_button_login_facebook"
            android:layout_marginBottom="@dimen/margin_tiny"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_tiny"/>

        <Button
            android:id="@+id/btn_demo"
            android:layout_width="@dimen/button_width_login"
            android:layout_height="@dimen/button_height_login"
            android:text="@string/login_later"
            android:textAllCaps="false"
            android:textSize="@dimen/text_normal"
            android:background="@drawable/select_button_login_try_demo"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
</LinearLayout>