<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height_toolbar"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_wall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layer_avatar_character"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorTransparent"/>
            </RelativeLayout>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorWhite"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/colorWhite">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clip"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"/>
        </android.support.design.widget.TabLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipToPadding="false"/>
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_behavior="leduyhung.me.anime.ui.character.detail.behaviors.ToolbarBehavior"
        app:layout_collapseMode="pin">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/height_toolbar"
                android:layout_height="@dimen/height_toolbar"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_white"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="@dimen/icon_small"
        android:layout_height="@dimen/icon_small"
        android:src="@drawable/img_wait_image"
        app:layout_behavior="leduyhung.me.anime.ui.character.detail.behaviors.AvatarBehavior"/>

    <TextView
        android:id="@+id/txt_avatar"
        android:layout_width="@dimen/width_search_view"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_tiny"
        app:layout_behavior="leduyhung.me.anime.ui.character.detail.behaviors.NameBehavior"/>

    <leduyhung.view.myprogress.loading.dot.LoadingDotView
        android:id="@+id/loading_dot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_biggest_2"
        app:loading_dot_color="@color/colorWhite"
        app:loading_dot_distance="@dimen/distance_loading_dot"
        app:loading_dot_radius="@dimen/radius_loading_dot"/>
</android.support.design.widget.CoordinatorLayout>